objects/TAFObject__c.object
<CustomObject>
    <fields>
        <fullName>TAFField10__c</fullName>
        <label>TAFField10</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAFField1__c</fullName>
        <label>TAFField1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAFField2__c</fullName>
        <label>TAFField2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>TAFObject</label>
    <nameField>
        <label>TAFObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TAFObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>